# ClassifyMe

./: .dockerignore  .env  .env_example  .gitignore  Dockerfile  Dockerfile~  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  vercel.json
image_web_classifier/: asgi.py  settings.py  urls.py  wsgi.py
main/: views.py
main/static/main/css/: style.css
main/templates/main/: base.html  index.html
myenv-3.11/: pyvenv.cfg
myenv-3.11/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
staticfiles/main/css/: style.css
